--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,103 @@
-nav{
+:root{
 
     display: flex;
     justify-content: center;
+
+}
+
+/* header da pagina*/
+.conteiner{
+
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-areas:'sobrenos paravoce contatos contatos cadastro entrar';
+    gap: 32px;
+    height: 70px;
     width: 1530px;
 
+
+}
+#sobrenos{
+    grid-area: sobrenos;
+}
+#paravoce{
+    grid-area: paravoce;
+}
+#contatos{
+    grid-area: contatos;
+
+}
+#cadastro{
+    grid-area: cadastro;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 25px;
+    background-color: var(--color-rosa-escuro1);
+    width: 120px;
+    font-family: "Poppins-Regular";
+}
+#entrar{
+    grid-area: entrar;
+    color: var(--color-rosa-escuro1);
+    font-family: "Poppins-regular";
+}
+.top_minusculo{
+    font-family: "Poppins-Regular";
+    color: var(--color-rosa-escuro1);
+}
+#conta{
+padding: 0px 40px 0px 0px;
+}
+/*Fim do header da pagina*/
+
+
+
+
+.conteiner_sobrenos{
+
+    display: grid;
+    justify-content: center;
+    grid-template-areas:
+    'logo logo imagen imagen'
+    'sobre sobre imagen imagen'
+    'sobre sobre imagem imagem';
+    width: 1530px;
+}
+#logo{
+    grid-area: logo;
+}
+#imagen{
+    grid-area: imagen;
+}
+#sobre{
+    grid-area: sobre;
+}
+.logo{
+
+    font-family: Sofia-Regular;
+    color: var(--color-rosa-escuro1);
+
 }
 
 
-main{
 
-width: 1530px;
 
-}
-div{
 
-display: flex;
-justify-content: center;
-width: 1530px;
 
-}
 
-section{
 
-display: flex;
-justify-content: center;
-width: 1530px;
 
-}
+
+
+
+
+
+
+
+
 
 body{
 
@@ -36,6 +107,6 @@ body{
 }
 html{
 
-    height: 100%;
+    height: 100vw;
 
 }
