--- a/css/historico-medidas.css
+++ b/css/historico-medidas.css
@@ -10,8 +10,8 @@
         padding: 20px;
         text-align: center;
         margin: 40px auto;
-        width: 90%;
-        border-radius: 15px;
+        width: 80%;
+        border-radius: 10px;
     }
     
     h2 {
@@ -68,7 +68,7 @@
         margin-bottom: 15px;
     }
     
-    .form-observacoes {
+    .form-observations {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -90,9 +90,9 @@
         justify-content: center;
         font-weight: bold;
         align-items: center;
-        gap: 1rem;
+        gap: 25rem;
         margin-top: 40px;
-        flex-direction: column;
+        flex-direction: row;
     }
     
     .button-backward,
@@ -130,11 +130,8 @@
         .grid-container {
             grid-template-columns: 1fr;
         }
-    }
-    
-    .button-backward,
-    .button-forward {
-        width: 100%;
-        max-width: 300px;
-        margin-bottom: 1rem;
+        .form-buttons {
+            flex-direction: column;
+            gap: 1rem;
+        }
     }
