--- a/css/Esteticistastyle.css
+++ b/css/Esteticistastyle.css
@@ -96,7 +96,7 @@ main{
 
 .icones{
 
-    width: 90%;
+    width:60%;
     border-radius: 5px;
     border-width: 5px;
     border-color: blue;
@@ -110,7 +110,7 @@ main{
     display: block;
     text-align: center;
     font-size: 20px;
-    width: 100%;
+    width: 25%;
 
 
     
@@ -127,8 +127,8 @@ main{
 
 .Div1
 {
-    display: block;
-    width: 20%;
+    display: flex;
+    width: 100%;
     gap: 30px;
 
 
@@ -147,150 +147,66 @@ main{
 
 
 
-@media screen and (max-width: 383px) {
-    body {
-      background-image: linear-gradient(white, white);
+
+@media screen and (max-width: 431px)
+{
+
+    main{
+
+        gap: 0%;
+
     }
 
-    
-   
+    .Div1{
+        width: 100%;
+       
+    }
+     
+  .icones [title="Fichas_de_Avaliação"] 
+  {
+
+    font-size: 15px;
+
   }
 
+  .Header h1
+  {
 
 
+      font-size: 40px;
+  }
 
-@media screen and (max-width: 431px) {
+  
+  .Header img {
 
-    .Header h1
-    {
+    width:50%;
 
+ }
 
-        font-size: 40px;
-    }
-    
-}
+ .Header p{
 
-@media screen and (max-width: 500px) {
+    font-size: 9px;
 
-    .Header img {
-
-       width:50%;
-
-    }
 
 }
 
-@media screen and (max-width: 383px)
+.icones img{
+
+    width: 400%;
+ 
+
+
+}
+
+.icones a
 {
 
-    .Header h1 {
 
-
-        font-size: 28px;
-    }
-
-
+    font-size: 16px;
 }
 
-
-@media screen and (max-width: 345px)
-{
-
-    .Header h1 {
-
-
-        font-size: 20px;
-    }
-
-
-}
-
-@media screen and (max-width: 512px)
-{
-
-    .icones img{
-
-        width: 120%;
-
-    }
-
-    .icones a
-    {
-
-
-        font-size: 20px;
-    }
-
-
-}
-
-@media screen and (max-width: 308px)
-{
-
-    .icones a
-    {
-
-
-        font-size: 16px;
-    }
-
-
-
-
-}
-
-@media screen and (max-width: 473px)
-{
-
-    .icones img{
-
-        width: 140%;
-
-    }
-
-
-}
-
-@media screen and (max-width: 300px)
-{
-
-    .icones img{
-
-        width: 190%;
-
-    }
-
-
-}
-
-@media screen and (max-width: 500px){
-
-    .Header ul{
-
-    font-size: 14px;
-
-    }
-
-    .Header p
-    {
-
-
-        font-size: 12px;
-    }
-
-
-}
-
-@media screen and (max-width: 400px)
-{
-
-    .Header p{
-
-        font-size: 9px;
-
-
-    }
-
-
+body {
+    background-image: linear-gradient(white, white);
+  }
 
 }
