--- a/css/Esteticistastyle.css
+++ b/css/Esteticistastyle.css
@@ -54,11 +54,11 @@ Header h1 {
 
 .Header img{
 
- width: 50%;
+ /* width: 50%;
  border-width: 5px;
     /* border-color: rgb(0, 183, 255);
     border-style: dashed; */
-    justify-content: space-between;
+    justify-content: space-between; 
     
 }
 
@@ -66,13 +66,15 @@ Header h1 {
 #grid-img 
 {   
    
-    /* margin-bottom: 28px;
-    
+    margin-bottom: 28px;
+/*     
     border-color: rgb(49, 190, 79);
-    border-style: dashed; */
+    border-style: dashed;
+    border-width: 5px; */
     justify-content: space-between;
-    width: 20%;
+    width: 20%;     
     display: block;
+    
    
 }
 
@@ -144,7 +146,7 @@ main{
     border-radius: 5px;
     margin-left: 15px;
     display: none;
-    transform: translateX(-84%)translateY(50%);
+    transform: translateX(-125%)translateY(60%);
 
 }
 
@@ -169,6 +171,8 @@ main{
         margin-left: 10%;
 
     }
+
+    
 
     .Div1{
         width: 100%;
@@ -222,6 +226,22 @@ body {
     background-image: linear-gradient(white, white);
   }
 
+
+  /* #MenuEsteticista
+{
+
+width: 20%;
+height: 10%;;
+
+} */
+
+#Lista{
+    transform: translateX(-111%)translateY(90%);
+
+
 }
+}
+
+
 
  
