--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-:root{
-
-    display: flex;
-    justify-content: center;
-
-}
-
 /* header da pagina*/
 .conteiner{
 
@@ -15,8 +8,6 @@
     gap: 32px;
     height: 70px;
     width: 1530px;
-
-
 }
 #sobrenos{
     grid-area: sobrenos;
@@ -26,8 +17,9 @@
 }
 #contatos{
     grid-area: contatos;
-
+    
 }
+
 #cadastro{
     grid-area: cadastro;
     display: flex;
@@ -38,33 +30,37 @@
     background-color: var(--color-rosa-escuro1);
     width: 120px;
     font-family: "Poppins-Regular";
+    margin-left: 64px;
 }
 #entrar{
     grid-area: entrar;
     color: var(--color-rosa-escuro1);
     font-family: "Poppins-regular";
 }
+#conta{
+padding: 0px 40px 0px 0px;
+}
 .top_minusculo{
     font-family: "Poppins-Regular";
     color: var(--color-rosa-escuro1);
 }
-#conta{
-padding: 0px 40px 0px 0px;
-}
 /*Fim do header da pagina*/
 
 
+/* La belle e sua beleza*/
 
-
+/* Start Grid Area */
 .conteiner_sobrenos{
 
     display: grid;
     justify-content: center;
+    align-items: center;
+    grid-template-columns: 2fr;
     grid-template-areas:
-    'logo logo imagen imagen'
-    'sobre sobre imagen imagen'
-    'sobre sobre imagem imagem';
-    width: 1530px;
+    'logo imagen'
+    'sobre imagen';
+    width: auto;
+    height: auto;
 }
 #logo{
     grid-area: logo;
@@ -73,40 +69,164 @@ padding: 0px 40px 0px 0px;
     grid-area: imagen;
 }
 #sobre{
-    grid-area: sobre;
+    grid-area: sobre; 
+}
+/* End Grid area*/
+
+.config{
+
+   max-width: 1530px; 
+
 }
 .logo{
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content:center;
+    
+}
+.titulo{
+
+    margin: 0;
+    font-size: 4rem;
+    font-family: Sofia-Regular;
+    color: var(--color-rosa-escuro1);
+
+}
+.text{
+
+    font-weight: 550;
+    font-family: Poly-Regular;
+    color: var(--color-rosa-escuro1);
+}
+.img_config{
+
+    width: 80%;
+    height: 80%;
+    margin-left: 48px;
+
+}
+
+/* End la bele*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Config Basica Da Pagina*/
+body{
+
+    max-width: 1530px;
+    margin: auto;    
+
+}
+.titulos{
 
     font-family: Sofia-Regular;
     color: var(--color-rosa-escuro1);
 
 }
+.subtitulos{
 
+    font-size: 2.5rem;
+    font-family: Poly-Regular;
+    color: var(--color-rosa-escuro1);
+    font-weight: 550;
 
+}
+.textos{
 
+    font-size: 20px;
+    font-family: Poppins-Regular;
+    font-weight: 600;
+    color: var(--color-rosa-escuro1);
 
+}
+.principal{
 
+display: flex;
 
-
-
-
-
-
-
-
-
-
-
-
+}
 
 body{
 
     background-image: linear-gradient(white,#dcb7beff);
-   
+    min-height: 100vh;
 
 }
-html{
 
-    height: 100vw;
+
+/* footer start*/
+
+/* .containerfooter{
+
+    display: grid;
+    grid-template-columns: 3fr;
+    grid-template-areas:
+    'fale info rede';
+    align-items:center;
+    justify-content: center;
+    margin: 32px 0 32px 0;
+    width: 1530px;
+
+}
+#fale{
+    grid-area: fale;
+}
+#rede{
+    grid-area: rede;
+}
+#info{
+    grid-area: info;
+} */
+
+.containerfooter{
+
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    width: 1230px;
+    margin: 0 150px 80px 150px;
+
+}
+
+
+.titi{
+
+    margin: 30px 0 10px 150px;
+    border-bottom: solid 1px;
+
+}
+.textos-simbo{
+
+    font-size: 40px;
+    font-family: Poppins-Regular;
+    font-weight: 600;
+    color: var(--color-rosa-escuro1);
+
+}
+.textos-footer{
+
+    font-size: 20px;
+    font-family: Poppins-Regular;
+    font-weight: 600;
+    color: var(--color-rosa-escuro1);
+
+}
+.subtitulo-footer{
+
+    font-size: 2rem;
+    font-family: Poly-Regular;
+    color: var(--color-rosa-escuro1);
+    font-weight: 550;
 
 }
